# c2023-challenge

./: .editorconfig  .gitignore  AI五子棋实验报告.docx  CMakeLists.txt  C语言学习笔记.md  README.md  levfing_path_GA.c  shell.nix  vcpkg.json
ClassDesign/: BoardDrawer.cpp  BoardDrawer.h  DataType.cpp  DataType.h  DataTypes.cpp  DataTypes.h  main.cpp  sample.cpp
ClassDesign/DataHelper/: ChessTree.cpp  ChessTree.h  DataType.cpp  DataType.h  ModelChecker.cpp  ModelChecker.h
ClassDesign/Player/: ChessTreeRobot.cpp  ChessTreeRobot.h  HumanPlayer.cpp  IPlayer.h  RandomRobot.cpp
C语言课程设计实验报告/: C语言课程设计实验报告2023080909007姜皓裕.docx
class/: CMakeLists.txt
class/choose/: main.c
class/insert/: main.c
class/list/: main.c
class/none/: main.c
class/others_1/: main.c
class/pop/: main.c
class/queue/: Queue.c  Queue.h  main.c
class/reverse_bolan_SeqLink/: SeqList.c  SeqList.h  main.c
class/stack/: main.c
class/struct/: main.c
design/: CMakeLists.txt
design/wuziqi/: class.h  evaluate.c  evaluate.h  fontdata.c  fontdata.h  game.c  game.h  interaction.c  interaction.h  interface.c  interface.h  main.c  stackAndSeqList.c  stackAndSeqList.h
gobang/: CMakeLists.txt  GUI.c  act.c  check.c  debug_data.txt  gobang.c  gobang.h  init_.c  judge_function.h  main.c  search_function.c  search_function.h  time_test.txt  vcpkg.json  实验报告.md
gobang/headers/: alpha_beta_pruning.h  gobang.h  gui.h  mcts.h  stack.h
gobang/res/: gobang.xlsx  log
gobang/src/: alpha_beta_pruning.c  gobang.c  gui.c  mcts.c  stack.c
level0/: C1.c  C2.c  C3.c  CMakeLists.txt  README.md  main.c
level0/bubbleSort/: main.c
level0/c0/: main.c
level0/c1/: CMakeLists.txt
level0/c1/c01_01/: main.c
level0/c1/c01_02/: main.c
level0/c1/c01_03/: mian.c
level0/c1/c01_04/: main.c
level0/c1/c01_05/: main.c
level0/c1/c01_06/: main.c
level0/c2/: CMakeLists.txt
level0/c2/c2_01/: main.c
level0/c2/c2_02/: main.c
level0/c2/c2_03/: main.c
level0/c2/c2_04/: main.c
level0/c2/c2_05/: main.c
level0/c2/c2_06/: main.c
level0/c2/c2_07/: main.c
level0/c2/c2_08/: main.c
level0/c2/c2_09/: main.c
level0/c2/c2_10/: main.c
level0/c3/: CMakeLists.txt
level0/c3/c3_01/: main.c
level0/c3/c3_02/: main.c
level0/c3/c3_03/: main.c
level0/c3/c3_04/: main.c
level0/c3/c3_05/: main.c
level0/c3/c3_06/: main.c
level1/: CMakeLists.txt
level1/p01_running_letter/: P01.c  main.c  main.cpp
level1/p02_is_prime/: Is_Prime.c  P02.c  Prime.h  is_prime.c  is_prime.h  main.c  main.cpp  prime.c  prime.h
level1/p03_all_primes/: P03.c  main.c  main.cpp
level1/p04_goldbach/: Is_prime.c  P04.c  func.c  header.h  main.c  main.cpp
level1/p05_encrypt_decrypt/: Crypter.cpp  Crypter.h  P05.c  main.c  main.cpp  main2c.c
level1/p06_hanoi/: P06.c  main.c  main.cpp
level1/p07_maze/: P07.c  creat.c  create.c  direction.c  game.c  game.h  have_neighbor.c  head_maze.h  initialize.c  main.c  main.cpp  main_bak.c  maze.txt  menu.c  move.c  print.c
level1/p08_push_boxes/: P08.c  PushBox.cpp  PushBox.h  PushBox2.txt  README.md  The result  calculate_score.c  check.c  direction.c  head_push_box.h  high_challenge.txt  init_.c  low_challenge.txt  main.c  main.cpp  map.c  menu.c  note.c  print.c  push.c  pushBox1.txt  pushBox2.txt  pushBox3.txt  pushBox4.txt  pushBox5.txt  push_boxes.h  read.c  score.txt  score2.txt  steps.c  test.c  whether_finish.c
level1/p08_push_boxes/map/: map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
level1/p09_linked_list/: NodeList.h  P09.c  S_L_List.c  S_L_List.h  link.h  linked_list.c  list.c  list.h  main.c  main.cpp
level1/p10_warehouse/: Data_Bucket.txt  P10.c  README.md  StoreHelper.cpp  StoreHelper.h  WareHouse.cpp  WareHouse.h  add_goods.c  data.txt  list.c  load_goods_list.c  main.c  main.cpp  manage_system.c  manage_system.h  menu.c  remove_goods.c  save_goods_list.c  show_goods_list.c  warehouse.c  warehouse.h
level1/temp/: creat.c  head_temp.h  main.c  menu.c
level2/: CMakeLists.txt
level2/GA/: GA.h  GA.maze.c  GA_function.c  GA_main.c  README.md  main.c  maze.c  maze.h  stack.c  stack.h
level2/NeuralNetworks/: NEURALNETWORK.c  Network.cpp  Network.h  NeuralNetworks.c  anothermethod.c  basical_parameter.h  functions.c  functions.h  given_data.txt  main.cpp  test_data.txt  train_data.h  w_hidden_output.txt  w_input_hidden.txt
level2/PI/: CMakeLists.txt  Calculator.cpp  Calculator.h  PI.c  README.md  big_decimal.c  big_decimal.h  main.c  main.cpp
level2/PI/PI/: main.c
level2/SkipList/: CMakeLists.txt  SkipList.h  create.c  delete.c  destroy.c  function.c  insert.c  main.c  main.cpp  modify.c  search.c  skiplist.c  标头.h
my_study/: CMakeLists.txt
my_study/delete_duplicates/: main.c
my_study/my_list/: main.c  s_list.c  s_list.h
my_study/packed_array/: main.c
my_study/static_list/: SeqList.c  SeqList.h  main.c
实验/: README.md
课程设计/: AIchess.c  五子棋.pptx  五子棋实验报告 2023080912027 温馨.docx  实验报告
