project(c2_01)

add_executable(c2_01 c2_01/main.c)

add_executable(c2_03 c2_03/main.c)

add_executable(c2_04 c2_04/main.c)

add_executable(c2_05 c2_05/main.c)

add_executable(c2_06 c2_06/main.c)

add_executable(c2_07 c2_07/main.c)

add_executable(c2_08 c2_08/main.c)

add_executable(c2_09 c2_09/main.c)

add_executable(c2_10 c2_10/main.c)

add_executable(c2_02 c2_02/main.c)
